<resources>
    <string name="app_name">BankApp_MVVM_ROOM_Navigation</string>

    <string name="register_text">Please enter details to Register</string>

    <string name="login">Login</string>
    <string name="please_login_to_your_account">Please login to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="register">Register</string>
    <string name="please_enter_details_to_register">Please enter details to register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="version_1_0">Version 1.0</string>
</resources>