<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_margin="30dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/login"
        android:textSize="@dimen/title"
        android:textColor="@color/apptheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="5dp"
        android:text="@string/please_login_to_your_account"
        android:textSize="@dimen/second_title"
        android:textColor="@color/light_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/light_black"
        android:textColor="@color/apptheme"
        android:layout_marginTop="30dp"
        android:id="@+id/emailId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/light_black"
        android:textColor="@color/apptheme"
        android:layout_marginTop="30dp"
        android:id="@+id/passwordId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/forgotpwd"
        android:layout_gravity="end"
        android:layout_marginTop="5dp"
        android:text="@string/forgot_password"
        android:textSize="@dimen/textsize_small"
        android:textColor="@color/apptheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="20dp"
        android:id="@+id/loginbtn"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize"
        android:background="@color/apptheme"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/dont_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textStyle="bold"
            android:layout_marginStart="2dp"
            android:textColor="@color/apptheme"
            android:id="@+id/gotoRegister"
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>